# sim

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md
src/: game.rs  gfx.rs  gui.rs  main.rs
src/player/: human.rs  minimax.rs  mod.rs  random.rs
static/: index.html
